--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^4.1.3",
+    "fabric": "^5.3.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "magic-wand-tool": "^1.1.7",
-    "paper": "0.11.8",
     "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^3.0.5",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
     "web-vitals": "^2.1.0"
